--- a/client/nested_comments/nested_comments.html
+++ b/client/nested_comments/nested_comments.html
@@ -42,7 +42,7 @@
   	<small class="muted">{{createdAt}}</small>
   	<p>{{description}}</p>
   	<div class="text-right">
-  		<span>Published by {{userEmail currentUser}}</span>
+  		<span>Published by {{userEmail userId}}</span>
   	</div>
   	<hr/>
   	{{> newComment}}
