--- a/client/nested_comments/nested_comments.html
+++ b/client/nested_comments/nested_comments.html
@@ -55,7 +55,7 @@
 	    	<img class="media-object img-circle" src="images/silhouette.png" width="50px" height="50px"/>
 	   	</a>
 	    <div class="media-body">
-	      	<h5 class="media-heading">{{userEmail currentUser}}
+	      	<h5 class="media-heading">{{userEmail userId}}
 			<br/>
 	      	<small class="text-muted">{{createdAt}}</small></h5> 
 			{{text}}
